# AI-SRE-Agent

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  alembic.ini  opencode.jsonc  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agent/: __init__.py
backend/: __init__.py  config.py  main.py
backend/analysis/: README.md  __init__.py  __main__.py  detectors.py  knowledge.py  llm.py  models.py  pipeline.py
backend/api/: README.md  __init__.py  persistence.py  schemas.py  service.py
backend/connectors/: README.md  __init__.py  __main__.py  base.py  jira.py  kubernetes.py  loki.py  prometheus.py  runbook.py  scenario_source.py  schemas.py  settings.py
backend/core/: __init__.py
backend/db/: __init__.py  base.py  seed.py  session.py
backend/evaluation/: __init__.py  __main__.py  chart.py  checks.py  compare.py  persistence.py  report.py  runner.py
backend/observability/: __init__.py  correlation.py  logging.py  metrics.py
docs/: HANDOVER.md  architecture.md  data-model.md  demo-script.md  scope.md
infra/: Dockerfile.backend  Dockerfile.ui  README.md  docker-compose.yml
migrations/: env.py
reports/: eval-baseline.json  eval-baseline.md  eval-comparison.md  eval-latest.json  eval-latest.md
sample-data/: README.md
scenarios/: README.md
tests/: test_analysis.py  test_api.py  test_connectors.py  test_diagnosis_service.py  test_eval_compare.py  test_evaluation.py  test_evaluation_runner.py  test_health.py  test_incidents_api.py  test_infra.py  test_observability.py  test_persistence_mapping.py  test_rag.py  test_remediation.py  test_scenarios.py  test_schema.py  test_telemetry.py  test_workflow_probe.py
ui/: README.md  app.py
(+101 files in other folders)
