[project]
name = "ai-sre-agent"
version = "0.1.0"
description = "An AI Site Reliability Engineering agent for incident detection, diagnosis, and remediation guidance."
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Conservative, widely-used baseline: pycodestyle errors/warnings, pyflakes,
# and import sorting. Keeps the gate meaningful without being noisy.
select = ["E", "F", "W", "I"]

[tool.ruff.lint.isort]
known-first-party = ["backend", "agent", "ui"]
