[project]
name = "ai-sre-agent"
version = "0.1.0"
description = "An AI Site Reliability Engineering agent for incident detection, diagnosis, and remediation guidance."
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Blocking lint gate: pycodestyle errors/warnings and pyflakes. Import sorting
# (I) is handled by the advisory `ruff format`/`ruff check --fix` pass rather
# than the blocking gate; enable it here once the codebase is formatted.
select = ["E", "F", "W"]

[tool.ruff.lint.isort]
known-first-party = ["backend", "agent", "ui"]
